<?xml version="1.0" encoding="utf-8"?><!--
 Copyright 2014 The Android Open Source Project

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<resources>
    <string name="picture">Capture</string>
    <string name="password_reset">Reset password</string>
    <string name="password_enter">Enter password</string>
    <string name="password_ok">Password cached</string>
    <string name="password_incorrect">Password incorrect</string>
    <string name="browser_unavailable">File browser unavailable</string>
    <string name="magic_label">Magic string</string>
    <string name="password_invalid">Password has to be at least 8 characters</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="password_button">Set</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="password_not_set">Password not set</string>
    <string name="title_activity_import">ImportActivity</string>
    <string name="peer_password">Peer password</string>
    <string name="peer_magic">Peer magic</string>
    <string name="import_image">Import</string>
    <string name="view_image">View</string>
    <string name="delay_string">Delay(s)</string>

    <string-array name="delay_array">
        <item>0</item>
        <item>5</item>
        <item>10</item>
    </string-array>


</resources>
